--- a/Big_Data_Project.ipynb
+++ b/Big_Data_Project.ipynb
@@ -714,8 +714,8 @@
     "\n",
     "    \"\"\" set and show df plot bar \"\"\"\n",
     "    ax=df_plot.plot(kind='bar', grid=True, figsize=(25,75), fontsize=25)\n",
-    "    ax.set_xlabel(\"Number of jobs\", fontsize=25)\n",
-    "    ax.set_ylabel(\"City\", fontsize=25)\n",
+    "    ax.set_xlabel(\"City\", fontsize=25)\n",
+    "    ax.set_ylabel(\"Number of jobs\", fontsize=25)\n",
     "    ax.set_title(\"Number of Job per City\", fontsize=25)\n",
     "    ax.legend(fontsize=25)\n",
     "    plt.show()\n",
